ULEARN-481 removed margin-bottom to last element in flashcard answer

--- a/src/Frontend/src/components/flashcards/Flashcards/OpenedFlashcard/openedFlashcard.less
+++ b/src/Frontend/src/components/flashcards/Flashcards/OpenedFlashcard/openedFlashcard.less
@@ -87,6 +87,10 @@
   font-weight: 400;
 }
 
+.answer >:last-child {
+  margin-bottom: 0;
+}
+
 .theoryLinks {
   margin-top: 20px;
   color: @additionalColor;
