--- a/src/Frontend/src/components/course/Navigation/Course/CourseNavigationItem/CourseNavigationItem.less
+++ b/src/Frontend/src/components/course/Navigation/Course/CourseNavigationItem/CourseNavigationItem.less
@@ -23,6 +23,7 @@
     text-decoration: none;
   }
 }
+
 .active {
   background-color: @backgroundGray;
 }
@@ -47,6 +48,13 @@
   padding-left: 5px;
 }
 
+.isNotPublished {
+  background-color: @lightOrange;
+}
+
+.isNotPublishedIcon {
+  float: left;
+}
 
 @media (min-width: @maxLaptopWidth) {
   .itemLink {
