--- a/src/Frontend/src/components/course/Course/Course.less
+++ b/src/Frontend/src/components/course/Course/Course.less
@@ -29,6 +29,7 @@
 .title {
   margin-top: 0;
   margin-bottom: 16px;
+  word-break: break-all;
 
   text-align: center;
 
@@ -64,8 +65,8 @@
 .toggleContainer {
   display: flex;
   width: 100%;
-  margin-top: 16px;
-  margin-bottom: 16px;
+  margin-top: 0;
+  margin-bottom: 2px;
   justify-content: flex-end;
 }
 
